# SDL2-hello-world

./: Cargo.toml
.github/workflows/: rust.yml
src/: App.rs  main.rs
